feat: create-product
